--- a/Proyect_Development.ipynb
+++ b/Proyect_Development.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "[2 rows x 61 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,15 +147,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How has Berkshire Hathaway's portfolio grown over time?\""
+    "Number of companies in Berkshire Hathaway's portfolio by year?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +305,7 @@
        "[3 rows x 61 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -349,147 +350,147 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1994-12-31</td>\n",
-       "      <td>10</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1995-12-31</td>\n",
-       "      <td>10</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1996-12-31</td>\n",
-       "      <td>10</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1997-12-31</td>\n",
-       "      <td>9</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1998-12-31</td>\n",
-       "      <td>9</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>1999-12-31</td>\n",
-       "      <td>8</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2000-12-31</td>\n",
-       "      <td>8</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>2001-12-31</td>\n",
-       "      <td>7</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>2002-12-31</td>\n",
-       "      <td>11</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>2003-12-31</td>\n",
-       "      <td>13</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>2004-12-31</td>\n",
-       "      <td>12</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>2005-12-31</td>\n",
-       "      <td>15</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>2006-12-31</td>\n",
-       "      <td>19</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>2007-12-31</td>\n",
-       "      <td>20</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>2008-12-31</td>\n",
-       "      <td>16</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>2009-12-31</td>\n",
-       "      <td>14</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>2010-12-31</td>\n",
-       "      <td>16</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>2011-12-31</td>\n",
-       "      <td>16</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>2012-12-31</td>\n",
-       "      <td>16</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>2013-12-31</td>\n",
-       "      <td>18</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>2014-12-31</td>\n",
-       "      <td>18</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>2015-12-31</td>\n",
-       "      <td>18</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>2016-12-31</td>\n",
-       "      <td>18</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>2017-12-31</td>\n",
-       "      <td>18</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>2018-12-31</td>\n",
-       "      <td>18</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>2019-12-31</td>\n",
-       "      <td>18</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>2020-12-31</td>\n",
-       "      <td>20</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>2021-12-31</td>\n",
-       "      <td>18</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>2022-06-30</td>\n",
-       "      <td>15</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -497,53 +498,48 @@
       ],
       "text/plain": [
        "   Unnamed: 0  Total/companies\n",
-       "0  1994-12-31               10\n",
-       "1  1995-12-31               10\n",
-       "2  1996-12-31               10\n",
-       "3  1997-12-31                9\n",
-       "4  1998-12-31                9\n",
-       "5  1999-12-31                8\n",
-       "6  2000-12-31                8\n",
-       "7  2001-12-31                7\n",
-       "8  2002-12-31               11\n",
-       "9  2003-12-31               13\n",
-       "10 2004-12-31               12\n",
-       "11 2005-12-31               15\n",
-       "12 2006-12-31               19\n",
-       "13 2007-12-31               20\n",
-       "14 2008-12-31               16\n",
-       "15 2009-12-31               14\n",
-       "16 2010-12-31               16\n",
-       "17 2011-12-31               16\n",
-       "18 2012-12-31               16\n",
-       "19 2013-12-31               18\n",
-       "20 2014-12-31               18\n",
-       "21 2015-12-31               18\n",
-       "22 2016-12-31               18\n",
-       "23 2017-12-31               18\n",
-       "24 2018-12-31               18\n",
-       "25 2019-12-31               18\n",
-       "26 2020-12-31               20\n",
-       "27 2021-12-31               18\n",
-       "28 2022-06-30               15"
+       "0  1994-12-31                9\n",
+       "1  1995-12-31                9\n",
+       "2  1996-12-31                9\n",
+       "3  1997-12-31                8\n",
+       "4  1998-12-31                8\n",
+       "5  1999-12-31                7\n",
+       "6  2000-12-31                7\n",
+       "7  2001-12-31                6\n",
+       "8  2002-12-31               10\n",
+       "9  2003-12-31               12\n",
+       "10 2004-12-31               11\n",
+       "11 2005-12-31               14\n",
+       "12 2006-12-31               18\n",
+       "13 2007-12-31               19\n",
+       "14 2008-12-31               15\n",
+       "15 2009-12-31               13\n",
+       "16 2010-12-31               15\n",
+       "17 2011-12-31               15\n",
+       "18 2012-12-31               15\n",
+       "19 2013-12-31               17\n",
+       "20 2014-12-31               17\n",
+       "21 2015-12-31               17\n",
+       "22 2016-12-31               17\n",
+       "23 2017-12-31               17\n",
+       "24 2018-12-31               17\n",
+       "25 2019-12-31               17\n",
+       "26 2020-12-31               19\n",
+       "27 2021-12-31               17\n",
+       "28 2022-06-30               14"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "buffet_2022[\"Total/companies\"] = buffet_2022.count(axis=1) \n",
+    "#create a new column called \"Total/companies\" and set the number of companies by year\n",
+    "\n",
+    "buffet_2022[\"Total/companies\"] = buffet_2022.count(axis=1) - 1\n",
     "buffet_2022[[\"Unnamed: 0\",\"Total/companies\"]]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
