--- a/Proyect_Development.ipynb
+++ b/Proyect_Development.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -109,32 +109,60 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1996-12-31</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10499.7</td>\n",
+       "      <td>3862.1</td>\n",
+       "      <td>2731.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 61 columns</p>\n",
+       "<p>3 rows × 61 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "  Unnamed: 0  Apple   HP  Activision Blizzard  Occidental Petroleum  \\\n",
        "0 1994-12-31    0.0  0.0                  0.0                     0   \n",
        "1 1995-12-31    0.0  NaN                  NaN                     0   \n",
+       "2 1996-12-31    0.0  NaN                  NaN                     0   \n",
        "\n",
        "   Bank of America  Coca-Cola  Others  American Express  Kraft Foods  ...  \\\n",
        "0              0.0     5150.0  2458.2             818.9          0.0  ...   \n",
        "1              0.0     7425.0  2655.4            2046.3          0.0  ...   \n",
+       "2              0.0    10499.7  3862.1            2731.8          0.0  ...   \n",
        "\n",
        "   Goldman Sachs  Deere  AT&T  Delta Airlines  Southwest Airlines  \\\n",
        "0              0      0     0               0                   0   \n",
        "1              0      0     0               0                   0   \n",
+       "2              0      0     0               0                   0   \n",
        "\n",
        "   United Continental Holdings  Verisign  ITOCHU  Mitsubishi  Mitsui & Co.  \n",
        "0                            0       0.0       0           0             0  \n",
        "1                            0       0.0       0           0             0  \n",
+       "2                            0       0.0       0           0             0  \n",
        "\n",
-       "[2 rows x 61 columns]"
+       "[3 rows x 61 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +171,7 @@
     "#read the file from its relative path\n",
     "\n",
     "buffet_2022 = pd.read_excel(r'Data_sets\\Buffet_2022Q2.xlsx')\n",
-    "buffet_2022.head(2)"
+    "buffet_2022.head(3)"
    ]
   },
   {
@@ -151,12 +179,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Number of companies in Berkshire Hathaway's portfolio by year?"
+    "Number of companies in Berkshire Hathaway's portfolio by year and total worth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +208,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
+       "      <th>Year</th>\n",
        "      <th>Apple</th>\n",
        "      <th>HP</th>\n",
        "      <th>Activision Blizzard</th>\n",
@@ -282,7 +310,7 @@
        "</div>"
       ],
       "text/plain": [
-       "  Unnamed: 0  Apple  HP  Activision Blizzard  Occidental Petroleum  \\\n",
+       "        Year  Apple  HP  Activision Blizzard  Occidental Petroleum  \\\n",
        "0 1994-12-31    NaN NaN                  NaN                   NaN   \n",
        "1 1995-12-31    NaN NaN                  NaN                   NaN   \n",
        "2 1996-12-31    NaN NaN                  NaN                   NaN   \n",
@@ -305,7 +333,7 @@
        "[3 rows x 61 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,12 +341,30 @@
    "source": [
     "# replace all the 0.0 and 0 values with NaN\n",
     "buffet_2022 = buffet_2022.replace(0.0, np.nan)\n",
+    "# change the 1st column name to year\n",
+    "buffet_2022 = buffet_2022.rename(columns={'Unnamed: 0':'Year'})\n",
     "buffet_2022.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#clean the first column by leaving just the year and make it a int variable\n",
+    "# create a function to clean the column\n",
+    "def clean_column(word):\n",
+    "    word = str(word)\n",
+    "    word = word.replace(\"-12-31 00:00:00\",\"\")\n",
+    "    word = word.replace(\"-06-30 00:00:00\",\"\")\n",
+    "    word = int(word)\n",
+    "    return word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -342,203 +388,228 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Total/companies</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Apple</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Activision Blizzard</th>\n",
+       "      <th>Occidental Petroleum</th>\n",
+       "      <th>Bank of America</th>\n",
+       "      <th>Coca-Cola</th>\n",
+       "      <th>Others</th>\n",
+       "      <th>American Express</th>\n",
+       "      <th>Kraft Foods</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Goldman Sachs</th>\n",
+       "      <th>Deere</th>\n",
+       "      <th>AT&amp;T</th>\n",
+       "      <th>Delta Airlines</th>\n",
+       "      <th>Southwest Airlines</th>\n",
+       "      <th>United Continental Holdings</th>\n",
+       "      <th>Verisign</th>\n",
+       "      <th>ITOCHU</th>\n",
+       "      <th>Mitsubishi</th>\n",
+       "      <th>Mitsui &amp; Co.</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1994-12-31</td>\n",
-       "      <td>9</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5150.0</td>\n",
+       "      <td>2458.2</td>\n",
+       "      <td>818.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1995-12-31</td>\n",
-       "      <td>9</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7425.0</td>\n",
+       "      <td>2655.4</td>\n",
+       "      <td>2046.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1996-12-31</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10499.7</td>\n",
+       "      <td>3862.1</td>\n",
+       "      <td>2731.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 61 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  Apple  HP  Activision Blizzard  Occidental Petroleum  \\\n",
+       "0  1994    NaN NaN                  NaN                   NaN   \n",
+       "1  1995    NaN NaN                  NaN                   NaN   \n",
+       "2  1996    NaN NaN                  NaN                   NaN   \n",
+       "\n",
+       "   Bank of America  Coca-Cola  Others  American Express  Kraft Foods  ...  \\\n",
+       "0              NaN     5150.0  2458.2             818.9          NaN  ...   \n",
+       "1              NaN     7425.0  2655.4            2046.3          NaN  ...   \n",
+       "2              NaN    10499.7  3862.1            2731.8          NaN  ...   \n",
+       "\n",
+       "   Goldman Sachs  Deere  AT&T  Delta Airlines  Southwest Airlines  \\\n",
+       "0            NaN    NaN   NaN             NaN                 NaN   \n",
+       "1            NaN    NaN   NaN             NaN                 NaN   \n",
+       "2            NaN    NaN   NaN             NaN                 NaN   \n",
+       "\n",
+       "   United Continental Holdings  Verisign  ITOCHU  Mitsubishi  Mitsui & Co.  \n",
+       "0                          NaN       NaN     NaN         NaN           NaN  \n",
+       "1                          NaN       NaN     NaN         NaN           NaN  \n",
+       "2                          NaN       NaN     NaN         NaN           NaN  \n",
+       "\n",
+       "[3 rows x 61 columns]"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Apply the function to the column\n",
+    "buffet_2022[\"Year\"] = buffet_2022[\"Year\"].apply(lambda x: clean_column(x))\n",
+    "buffet_2022.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Total/companies</th>\n",
+       "      <th>Total/worth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1994</td>\n",
        "      <td>9</td>\n",
+       "      <td>17239.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1997-12-31</td>\n",
-       "      <td>8</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>9</td>\n",
+       "      <td>24004.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1998-12-31</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1999-12-31</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2000-12-31</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2001-12-31</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2002-12-31</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2003-12-31</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2004-12-31</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2005-12-31</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2006-12-31</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2007-12-31</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2008-12-31</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2009-12-31</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2010-12-31</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2011-12-31</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2012-12-31</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2013-12-31</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2014-12-31</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2015-12-31</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>2016-12-31</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>2017-12-31</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>2018-12-31</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>2020-12-31</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>2021-12-31</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>2022-06-30</td>\n",
-       "      <td>14</td>\n",
+       "      <th>2</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>9</td>\n",
+       "      <td>29556.6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  Total/companies\n",
-       "0  1994-12-31                9\n",
-       "1  1995-12-31                9\n",
-       "2  1996-12-31                9\n",
-       "3  1997-12-31                8\n",
-       "4  1998-12-31                8\n",
-       "5  1999-12-31                7\n",
-       "6  2000-12-31                7\n",
-       "7  2001-12-31                6\n",
-       "8  2002-12-31               10\n",
-       "9  2003-12-31               12\n",
-       "10 2004-12-31               11\n",
-       "11 2005-12-31               14\n",
-       "12 2006-12-31               18\n",
-       "13 2007-12-31               19\n",
-       "14 2008-12-31               15\n",
-       "15 2009-12-31               13\n",
-       "16 2010-12-31               15\n",
-       "17 2011-12-31               15\n",
-       "18 2012-12-31               15\n",
-       "19 2013-12-31               17\n",
-       "20 2014-12-31               17\n",
-       "21 2015-12-31               17\n",
-       "22 2016-12-31               17\n",
-       "23 2017-12-31               17\n",
-       "24 2018-12-31               17\n",
-       "25 2019-12-31               17\n",
-       "26 2020-12-31               19\n",
-       "27 2021-12-31               17\n",
-       "28 2022-06-30               14"
+       "   Year  Total/companies  Total/worth\n",
+       "0  1994                9      17239.5\n",
+       "1  1995                9      24004.3\n",
+       "2  1996                9      29556.6"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#create a new column called \"Total/companies\" and set the number of companies by year\n",
+    "#create a new column called \"Total/companies\" and set the number of companies\n",
+    "buffet_2022[\"Total/companies\"] = buffet_2022.count(axis=1)\n",
     "\n",
-    "buffet_2022[\"Total/companies\"] = buffet_2022.count(axis=1) - 1\n",
-    "buffet_2022[[\"Unnamed: 0\",\"Total/companies\"]]"
+    "#create a new column called \"Total/worth\" and set the worth of the porfolio\n",
+    "buffet_2022[\"Total/worth\"] = buffet_2022.sum(axis=1)\n",
+    "\n",
+    "#make a new data frame with the Total/companies and Total/woth per year\n",
+    "buffet_compnies_worht = buffet_2022[[\"Year\",\"Total/companies\",\"Total/worth\"]]\n",
+    "buffet_compnies_worht.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convert the data frame into an Excel file to perform a better visualization with the Tableau tool.\n",
+    "buffet_compnies_worht.to_excel('Data_sets\\Buffet_companies_worth.xlsx', index=False)"
    ]
   }
  ],
